--- a/package.json
+++ b/package.json
@@ -7,14 +7,32 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "ajv-errors": "^1.0.1",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "json-schema-ref-parser": "^7.1.0",
+    "markdown-it": "^9.1.0",
+    "match-all": "^1.2.5",
+    "property-expr": "^1.5.1",
     "vue": "^2.6.10",
+    "vue-async-computed": "^3.7.0",
+    "vue-color": "^2.7.0",
     "vue-router": "^3.0.3",
+    "vue-swatches": "^1.0.4",
+    "vue-vuelidate-jsonschema": "^0.13.4",
+    "vuedraggable": "^2.23.0",
+    "vuelidate": "^0.7.4",
+    "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.17.4",
+    "sass-loader": "^7.1.0",
+    "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.2.2"
   }
 }
